@@ -1,3 +1,8 @@
+2001-02-07  John Harper  <jsh@eazel.com>
+
+	* widgets/event.jl (make-event-item): strip leading and
+	trailing white space from the event name in the `ref' method
+
 2001-01-27  John Harper  <jsh@eazel.com>
 
 	* shell.jl (display-flattened-group): translate the real name
